@@ -208,10 +208,6 @@ class MultiCurrency {
 	 * @return void
 	 */
 	public function init() {
-		if ( ! $this->payments_account->is_stripe_connected() ) {
-			return;
-		}
-
 		$store_currency_updated = $this->check_store_currency_for_change();
 
 		// If the store currency has been updated, clear the cache to make sure we fetch fresh rates from the server.
@@ -257,10 +253,6 @@ class MultiCurrency {
 	 * @return void
 	 */
 	public function init_rest_api() {
-		if ( ! $this->payments_account->is_stripe_connected() ) {
-			return;
-		}
-
 		$api_controller = new RestController( \WC_Payments::create_api_client() );
 		$api_controller->register_routes();
 	}
@@ -271,10 +263,6 @@ class MultiCurrency {
 	 * @return void
 	 */
 	public function init_widgets() {
-		if ( ! $this->payments_account->is_stripe_connected() ) {
-			return;
-		}
-
 		$this->currency_switcher_widget = new CurrencySwitcherWidget( $this, $this->compatibility );
 		register_widget( $this->currency_switcher_widget );
 	}
@@ -343,8 +331,8 @@ class MultiCurrency {
 			return $cache_data;
 		}
 
-		// If connection to server cannot be established, return expired data or null.
-		if ( ! $this->payments_api_client->is_server_connected() ) {
+		// If connection to server cannot be established, or if Stripe is not connected, return expired data or null.
+		if ( ! $this->payments_api_client->is_server_connected() && ! $this->payments_account->is_stripe_connected() ) {
 			return $cache_data ?? null;
 		}
 
@@ -603,10 +591,6 @@ class MultiCurrency {
 	 * @return void
 	 */
 	public function update_selected_currency_by_url() {
-		if ( ! $this->payments_account->is_stripe_connected() ) {
-			return;
-		}
-
 		if ( ! isset( $_GET['currency'] ) ) { // phpcs:ignore WordPress.Security.NonceVerification
 			return;
 		}
@@ -620,10 +604,6 @@ class MultiCurrency {
 	 * @return void
 	 */
 	public function update_selected_currency_by_geolocation() {
-		if ( ! $this->payments_account->is_stripe_connected() ) {
-			return;
-		}
-
 		// We only want to automatically set the currency if it's already not set.
 		if ( $this->is_using_auto_currency_switching() && ! $this->get_stored_currency_code() ) {
 			$currency = $this->geolocation->get_currency_by_customer_location();
@@ -973,6 +953,11 @@ class MultiCurrency {
 	 * @return array Array with the available currencies' codes.
 	 */
 	private function get_account_available_currencies(): array {
+		// If Stripe is not connected, return an empty array. This prevents using MC without being connected to Stripe.
+		if ( ! $this->payments_account->is_stripe_connected() ) {
+			return [];
+		}
+
 		$wc_currencies      = array_keys( get_woocommerce_currencies() );
 		$account_currencies = $wc_currencies;
 
